# yubiCrypt

./: .gitignore  LICENSE.md  Makefile  NEWS  README.md  bug-fixes.md  formatted_identities.txt  identities.dict  install_pcsclite.py  installer.py
.src_snapshot/: decrypt.py
alpha_rust_rewrite/: Cargo.toml
alpha_rust_rewrite/.src_snapshot/: cli.rs  main.rs
alpha_rust_rewrite/.src_snapshot/encryption/: decrypt.rs  encrypt.rs
alpha_rust_rewrite/.src_snapshot/identities/: get.rs
alpha_rust_rewrite/.src_snapshot/installer/: pcsclite.rs
alpha_rust_rewrite/.src_snapshot/utils/: file.rs  logger.rs  mod.rs  timer.rs
alpha_rust_rewrite/.src_snapshot/utils/installer/: pcsclite.rs
alpha_rust_rewrite/.src_snapshot/utils/keys/: slots.rs
alpha_rust_rewrite/src/: cli.rs  error.rs  main.rs
alpha_rust_rewrite/src/encryption/: decrypt.rs  encrypt.rs  mod.rs
alpha_rust_rewrite/src/identities/: extract.rs  get.rs  mod.rs
alpha_rust_rewrite/src/installer/: pcsclite.rs
alpha_rust_rewrite/src/keys/: manager.rs  slots.rs
alpha_rust_rewrite/src/utils/: main.rs
alpha_rust_rewrite/src/utils/identities/: extract.rs  get.rs  mod.rs
alpha_rust_rewrite/src/utils/installer/: mod.rs
alpha_rust_rewrite/src/utils/keys/: manager.rs  mod.rs
alpha_rust_rewrite/src/utils/utils/: mod.rs
run_files/: check_keys.py  commands.py
setup_files/: add_aliases.py  copy_run_files.py  directory_checker_dcde.py  directory_checker_yubicrypt.py  install_age.py  install_age_plugin.py
src/: check_or_generate_key.py  client.py  decrypt.py  encrypt.py
yubiCryptImporter/: .dict  import.py
(+4 files in other folders)
