[package]
name = "yubi_crypt"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
regex = "1.10"
which = "5.0"
os_info = "3.7"
dirs = "6.0.0"
thiserror = "2.0.12"
pcsc = "2.9.0"
